[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maidenhead"
version = "1.7.0"
description = "Maidenhead Locator, Lat Lon coordinate convertor"
keywords = ["location", "maidenhead"]
classifiers = ["Development Status :: 5 - Production/Stable",
 "Environment :: Console",
 "Intended Audience :: End Users/Desktop",
 "Intended Audience :: Science/Research",
 "License :: OSI Approved :: MIT License",
 "Operating System :: OS Independent",
 "Programming Language :: Python :: 3",
 "Topic :: Scientific/Engineering :: GIS"
]
requires-python = ">=3.7"
dynamic = ["readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[project.optional-dependencies]
tests = ["pytest"]
lint = ["flake8", "flake8-bugbear", "flake8-builtins", "flake8-blind-except", "mypy"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
files = ["src"]

strict_optional = false
