[metadata]
name = maidenhead
version = 1.3.0
author = Michael Hirsch; Henri Kuiper
author_email = scivision@users.noreply.github.com
description = Maidenhead Locator, Lat Lon coordinate convertor
url = https://github.com/space-physics/maidenhead
keywords =
  location
  maidenhead
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: End Users/Desktop
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: GIS
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
packages = find:
scripts =
  Maidenhead.py
install_requires =

[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy

[options.entry_points]
console_scripts =
  Maidenhead = Maidenhead:main
