[metadata]
name = maidenhead
version = 1.7.0
author = Michael Hirsch; Henri Kuiper
author_email = scivision@users.noreply.github.com
description = Maidenhead Locator, Lat Lon coordinate convertor
url = https://github.com/space-physics/maidenhead
keywords =
  location
  maidenhead
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: End Users/Desktop
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: GIS
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
